<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSortOrder">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/contact_list_button_desc"
            app:srcCompat="@drawable/contact_list" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/map_button_desc"
            app:srcCompat="@drawable/map_icon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/settings_button_desc"
            app:srcCompat="@drawable/settings_list_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/sortContactsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="20dp"
        android:text="Sort Contacts By:"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupSortBy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupSortBy"
        android:layout_width="128dp"
        android:layout_height="141dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sortOrderTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortContactsTextView">

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name" />

        <RadioButton
            android:id="@+id/radioCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="City" />

        <RadioButton
            android:id="@+id/radioBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Birthday" />
    </RadioGroup>

    <TextView
        android:id="@+id/sortOrderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="319dp"
        android:layout_marginBottom="7dp"
        android:text="Sort Order:"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupSortOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSortBy" />

    <RadioGroup
        android:id="@+id/radioGroupSortOrder"
        android:layout_width="128dp"
        android:layout_height="86dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="263dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortOrderTextView">

        <RadioButton
            android:id="@+id/ascendingRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ascending" />

        <RadioButton
            android:id="@+id/descendingRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Descending" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>